gccida/g1/add_bound_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_bound_info/src/dwarf2out.c:9547:48: error: must use 'enum' tag to refer to type 'dwarf_attribute'
void  add_bound_info( dw_die_ref subrange_die, dwarf_attribute bound_attr, tree bound) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_bound_info/src/dwarf2out.c:9611:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_bound_info/src/dwarf2out.c:9630:22: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)v12 + 2), fixed); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_bound_info/src/dwarf2out.c:9700:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_bound_info/src/obj/dwarf2out.o] Error 1
